Add api realisation (#7)
* feat(api): add mappers and tests for convertin dto <-> domain

* refactor(lint): update code to prevent lint errors

* feat(errors): update global errors in code

* refactor(lint): update code to prevent lint errors

* feat(api): add realisation of missing api
